--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-ui-audio-player": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-share": "^4.4.0",
